--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "webpack-cli": "^3.1.2",
-    "webpack": "^4.28.2"
+    "uuid": "^3.3.2",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
     "eslint-plugin-standard": "^4.0.0",
